--- a/Sampling Methods/week2/hw.Rmd
+++ b/Sampling Methods/week2/hw.Rmd
@@ -4,7 +4,7 @@ author: "Bùi Khánh Duy"
 date: "`r Sys.Date()`"
 output:
   pdf_document: 
-    latex_engine: lualatex
+    latex_engine: xelatex
     highlight: espresso
   html_document: default
 ---
